add field "articles_count" to sections detail endpoint add search to sections and subsections remove extended search from articles remove drf-yasg and drf-spectacular openapi schema generators
